src/test/ui/borrowck/borrowck-init-plus-equal.stderr
error[E0381]: binding `v` isn't initialized
  --> $DIR/borrowck-init-plus-equal.rs:3:9
   |
LL |     let mut v: isize;
   |         ----- variable declared here
LL |     v = v + 1;
   |         ^ `v` used here but it isn't initialized

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
